# aigo_ros

./: README.md
aigo_nav/: CMakeLists.txt  package.xml
aigo_nav/launch/: .move_base_nav.launch.swp  aigo.launch  configure.launch  gmapping.launch  gps.launch  imu.launch  localization_run.launch  mapviz.launch  move_base_nav.launch  test.launch
aigo_nav/params/: base_local_planner_params.yaml  costmap_common_params.yaml  ekf_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navsat_params.yaml
aigo_serial/: CMakeLists.txt  package.xml
aigo_serial/launch/: aigo_serial.launch
aigo_serial/src/: aigo_serial.py  aigo_serial_pub.py  aigo_serial_sub.py  aigo_serial_test.py
aigo_tf/: CMakeLists.txt  package.xml
aigo_tf/src/: tf_broadcaster.cpp  tf_listener.cpp
aigo_urdf/: CMakeLists.txt  package.xml
aigo_urdf/launch/: aigo_urdf.launch
aigo_urdf/urdf/: aigo.urdf  diff_drive_description.urdf  robot.gv
aigo_waypoint/: CMakeLists.txt  package.xml
aigo_waypoint/launch/: aigo_waypoint.launch
aigo_waypoint/src/: gps_waypoint.cpp
aigo_waypoint/waypoint_files/: points_outdoor (copy 1).txt  points_outdoor.txt
dgps_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dgps_ros/include/: ntrip.h  serial.h
dgps_ros/launch/: dgps.launch
dgps_ros/src/: dgps_ros_node.cpp  ntripclient.cpp  serial.cpp
diff_drive/launch/: aigo.launch
diff_drive/nodes/: diff_drive_odometry
gps_goal/.gitbak/: config  index  packed-refs
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
src/: aigo_serial_pub.py
(+3 files in other folders)
